...
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarLabel: 'Home',
          tabBarButtonTestID: 'tab-home',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/home.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
      />
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Journal',
          tabBarLabel: 'Journal',
          tabBarButtonTestID: 'tab-journal',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/explore.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
        }}
      />
      <Tabs.Screen
        name="meds"
        options={{
          title: 'Meds',
          tabBarLabel: 'Meds',
          tabBarButtonTestID: 'tab-meds',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/meds.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
